@@ -67,6 +67,7 @@
 #cmakedefine01 ENABLE_MATHML
 #cmakedefine01 ENABLE_MEDIA_CAPTURE
 #cmakedefine01 ENABLE_MEDIA_STREAM
+#cmakedefine01 ENABLE_MEMORY_SAMPLER
 #cmakedefine01 ENABLE_METER_ELEMENT
 #cmakedefine01 ENABLE_MICRODATA
 #cmakedefine01 ENABLE_MUTATION_OBSERVERS
